# P1---

./: .gitignore  CMakeLists.txt  README.md  flowchart.drawio
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  unit-tests.yml
src/: CMakeLists.txt  astar_helper_functions.c  astar_helper_functions.h  bst_functions.c  clarke_and_wright_helper_functions.c  clarke_and_wright_helper_functions.h  create_routes.c  create_routes.h  delivery_algorithm.c  delivery_algorithm.h  delivery_sim.c  delivery_sim.h  package_distribution.c  package_distribution.h  resource_calculation.c  resource_calculation.h  run_program.c
test/: CMakeLists.txt  test_functions.c  test_package_distribution.c
